--- a/app/src/main/res/layout/fila.xml
+++ b/app/src/main/res/layout/fila.xml
@@ -35,45 +35,45 @@
                 android:id="@+id/lblUsuario"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Operador: Prueba" />
+                android:text="-" />
 
             <TextView
                 android:id="@+id/lblEquipo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:text="CAM-01"
+                android:text="-"
                 android:textStyle="bold" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/lblFecha"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_marginTop="5dp"
+                android:text="-" />
 
-                <TextView
-                    android:id="@+id/lblFecha"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="dd/mm/aaaa - Turno día" />
-
-                <TextView
-                    android:id="@+id/lblTurno"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginTop="5dp"
-                    android:text="07:52 AM"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
+            <TextView
+                android:id="@+id/lblTurno"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="-"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/lblHoroIni"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:text="H1: 34,850" />
+                android:text="-" />
+
+            <TextView
+                android:id="@+id/lblEstado"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="-"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
