--- a/app/src/main/res/layout/activity_fin_uso.xml
+++ b/app/src/main/res/layout/activity_fin_uso.xml
@@ -16,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logoc" />
-<!-- boton -->
+
     <ImageButton
         android:id="@+id/btnLogout"
         android:layout_width="48dp"
@@ -68,7 +68,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <EditText
-        android:id="@+id/txtHorometroIni"
+        android:id="@+id/txtHoroFin"
         android:layout_width="180dp"
         android:layout_height="48dp"
         android:layout_marginTop="10dp"
@@ -89,7 +89,7 @@
         android:text="Firma"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtHorometroIni" />
+        app:layout_constraintTop_toBottomOf="@+id/txtHoroFin" />
 
     <Button
         android:id="@+id/btnRegistrar"
